# big-idea-data-processor-ppr

./: .gitignore  CMakeLists.txt
include/: DataReader.h  ReadDexcomData.h
libs/: stringUtils.cpp  stringUtils.h
src/: CPUParallel.cpp  CPUSequential.cpp  DataReader.cpp  GPUParallel.cpp  kernel.cl  kernel2.cl  main.cpp
